--- a/VikingBros/App.config
+++ b/VikingBros/App.config
@@ -8,6 +8,7 @@
     <add key="SshHostKeyFingerprint" value="ssh-rsa 2048 RER9DGvD1QayPkv1mx/bVdoL8TyQzAST3ygYGtRxpt0=" />
     <add key="RemoteDirectory" value="Alfheim" />
     <add key="MOTD" value="https://ahunter3.firstcloudit.com/updates.html" />
+    <add key="PatreonPage" value="https://ahunter3.firstcloudit.com/patreon.html"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
